--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   <article style="display: none;" class="pop_up shopify_online">
     <div>
+      <span class="material-symbols-outlined">
+        close
+        </span>
       <h3>Shopify Online
         Store Development</h3>
       <ul>
@@ -50,6 +53,9 @@
   </article>
   <article style="display: none;" class="pop_up website_optimization">
     <div>
+      <span class="material-symbols-outlined">
+        close
+        </span>
       <h3>Website Optimization</h3>
       <ul>
         <li>🎯 Enhanced Search Visibility: Boost rankings with advanced SEO strategies.</li>
@@ -63,6 +69,9 @@
   </article>
   <article style="display: none;" class="pop_up store_migration">
     <div>
+      <span class="material-symbols-outlined">
+        close
+        </span>
       <h3>Store Migration</h3>
       <ul>
         <li>🚀 Seamless Transition: Trust our skilled team for a smooth and hassle-free site migration.</li>
@@ -80,6 +89,9 @@
   </article>
   <article style="display: none;" class="pop_up custom_development">
     <div>
+      <span class="material-symbols-outlined">
+        close
+        </span>
       <h3>Custom Development</h3>
       <ul>
         <li>🏆 Tailored Solutions: Our custom sites are crafted to meet your customers' unique needs, providing a
