--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <article style="display: none;" class="pop_up shopify_online">
     <div>
-      <span class="material-symbols-outlined">
+      <span class="close material-symbols-outlined">
         close
         </span>
       <h3>Shopify Online
@@ -53,7 +53,7 @@
   </article>
   <article style="display: none;" class="pop_up website_optimization">
     <div>
-      <span class="material-symbols-outlined">
+      <span class="close material-symbols-outlined">
         close
         </span>
       <h3>Website Optimization</h3>
@@ -69,7 +69,7 @@
   </article>
   <article style="display: none;" class="pop_up store_migration">
     <div>
-      <span class="material-symbols-outlined">
+      <span class="close material-symbols-outlined">
         close
         </span>
       <h3>Store Migration</h3>
@@ -89,7 +89,7 @@
   </article>
   <article style="display: none;" class="pop_up custom_development">
     <div>
-      <span class="material-symbols-outlined">
+      <span class="close material-symbols-outlined">
         close
         </span>
       <h3>Custom Development</h3>
