--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               </defs>
             </svg>
           </a>
-          <a href="https://www.upwork.com/ag/itsquad/" class="social__item-mob">
+          <a href="https://www.linkedin.com/company/it-squad-ua/" class="social__item-mob">
             <svg width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
               <ellipse cx="18" cy="18.0036" rx="18" ry="18.0036" fill="#0B50FF" />
               <path
@@ -1125,7 +1125,7 @@
               <h4 class="footer__label fw-700">Location</h4>
               <nav class="footer__menu menu-footer">
                 <ul class="menu-footer__list">
-                  <li class="menu-footer__item"><a href="" class="menu-footer__link p2">KYIV, UKRAINE 🇺🇦 💙💛</a></li>
+                  <li class="menu-footer__item"><span class="menu-footer__link p2">KYIV, UKRAINE 🇺🇦 💙💛</span></li>
                 </ul>
               </nav>
             </div>
