--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="shopify development, it Squad">
+  <meta name="keywords" content="it-squad, it-squad-ua, it">
+  <link rel="canonical" href="https://itsquad.agency/">
+  <meta name="robots" content="index,follow">
   <title>IT Squad</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -17,7 +21,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 
-<body class="wrapper">
+<body>
 
   <div class="up_scroll_btn__wrapper">
     <a class="up_scroll_btn" href="#">Scroll to Top</a>
@@ -136,7 +140,6 @@
       </span>
     </div>
   </div>
-
   <div class="wrapper">
     <header class="header">
       <div class="header__container _container">
