--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <meta name="description" content="shopify development, it Squad">
   <meta name="keywords" content="it-squad, it-squad-ua, it">
   <link rel="canonical" href="https://itsquad.agency/">
-  <meta name="robots" content="noindex">
-  <meta name="googlebot" content="noindex">
-  <meta name="googlebot-news" content="nosnippet">
+  <meta name="robots" content="index,follow">
   <title>IT Squad</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
