--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
       <div class="footer__top">
         <div class="footer__main _container">
           <div class="footer__logo">
-            <a href="" class="footer__logo-link">
+            <a href="#" class="footer__logo-link">
               <img src="./img/footer/01.png" alt="logo">
             </a>
           </div>
