--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
             fill="#2563FF" />
         </svg>
       </div>
-      <input type="checkbox">
+      <label class="label" for="toogler">toogler</label>
+      <input id="toogler" name="toogler" type="checkbox">
       <span class="slider">
       </span>
     </div>
@@ -214,7 +215,8 @@
           </div>
         </div>
         <div class="items__icons-mob">
-          <a href="https://www.instagram.com/itsquad.agency" class="social__item-mob">
+          <a href="https://www.instagram.com/itsquad.agency" alt="instagram" class="social__item-mob">
+            <desc class="sr-only">instagram Icon</desc>
             <svg width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
               <ellipse cx="18" cy="18.0036" rx="18" ry="18.0036" fill="#0B50FF" />
               <g clip-path="url(#clip0_25_768)">
@@ -234,7 +236,8 @@
               </defs>
             </svg>
           </a>
-          <a href="https://www.linkedin.com/company/it-squad-ua/" class="social__item-mob">
+          <a href="https://www.linkedin.com/company/it-squad-ua/" alt="linkedin" class="social__item-mob">
+            <desc class="sr-only">linkedin Icon</desc>
             <svg width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
               <ellipse cx="18" cy="18.0036" rx="18" ry="18.0036" fill="#0B50FF" />
               <path
@@ -247,7 +250,8 @@
                 stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a href="mailto:sales.itsquad.agency@gmail.com" class="social__item-mob">
+          <a href="mailto:sales.itsquad.agency@gmail.com" alt="email" class="social__item-mob">
+            <desc class="sr-only">email Icon</desc>
             <svg width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
               <ellipse cx="18" cy="18.0036" rx="18" ry="18.0036" fill="#0B50FF" />
               <path
@@ -257,7 +261,8 @@
                 stroke-linejoin="round" />
             </svg>
           </a>
-          <a href="https://www.upwork.com/ag/itsquad/" class="social__item-mob">
+          <a href="https://www.upwork.com/ag/itsquad/" alt="upwork" class="social__item-mob">
+            <desc class="sr-only">upwork Icon</desc>
             <svg width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
               <ellipse cx="18" cy="18.0036" rx="18" ry="18.0036" fill="#0B50FF" />
               <path
@@ -365,9 +370,9 @@
                     Great Project
                   </div>
                 </div>
-                <h3 class="great-project__text fw-700">
+                <div class="great-project__text fw-700 h3">
                   800+ Done
-                </h3>
+                </div>
               </div>
               <div class="main-block__resume">
                 <div class="resume-top">
@@ -486,8 +491,8 @@
       <section id="number-sec" class="section--for__link">
         <div class="_container">
           <div class="number__list">
-            <h3 class="number__list__header header-block_subtitle fw-600">Facts
-            </h3>
+            <div class="number__list__header header-block_subtitle fw-600 h3">Facts
+            </div>
             <h2 class="number__list__header our-services__header header-block_title fw-700">Our Facts</h2>
             <div class="number__list__element">
               <span class="number_icon material-symbols-outlined">
@@ -1133,7 +1138,8 @@
       <div class="footer__bottom">
         <div class="footer__container _container">
           <div class="footer__social social">
-            <a href="https://www.instagram.com/itsquad.agency" class="social__item">
+            <a href="https://www.instagram.com/itsquad.agency" alt="instagram" class="social__item">
+              <desc class="sr-only">Instagram Icon</desc>
               <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M17 2.02539H7C4.23858 2.02539 2 4.26397 2 7.02539V17.0254C2 19.7868 4.23858 22.0254 7 22.0254H17C19.7614 22.0254 22 19.7868 22 17.0254V7.02539C22 4.26397 19.7614 2.02539 17 2.02539Z"
@@ -1145,7 +1151,8 @@
                   stroke-linejoin="round" />
               </svg>
             </a>
-            <a href="https://www.linkedin.com/company/it-squad-ua/" class="social__item">
+            <a href="https://www.linkedin.com/company/it-squad-ua/" alt="linkedin" class="social__item">
+              <desc class="sr-only">linkedin Icon</desc>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_29_910)">
                   <path
@@ -1159,7 +1166,8 @@
                 </defs>
               </svg>
             </a>
-            <a href="mailto:sales.itsquad.agency@gmail.com" class="social__item">
+            <a href="mailto:sales.itsquad.agency@gmail.com" alt="email" class="social__item">
+              <desc class="sr-only">email Icon</desc>
               <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M4 4.02539H20C21.1 4.02539 22 4.92539 22 6.02539V18.0254C22 19.1254 21.1 20.0254 20 20.0254H4C2.9 20.0254 2 19.1254 2 18.0254V6.02539C2 4.92539 2.9 4.02539 4 4.02539Z"
@@ -1168,7 +1176,8 @@
                   stroke-linejoin="round" />
               </svg>
             </a>
-            <a href="https://www.upwork.com/ag/itsquad/" class="social__item">
+            <a href="https://www.upwork.com/ag/itsquad/" alt="upwork" class="social__item">
+              <desc class="sr-only">upwork Icon</desc>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M18.561 13.1579C17.459 13.1579 16.426 12.6909 15.487 11.9309L15.715 10.8549L15.723 10.8129C15.93 9.66994 16.572 7.75294 18.562 7.75294C20.054 7.75294 21.265 8.96494 21.265 10.4559C21.264 11.9449 20.053 13.1579 18.561 13.1579ZM18.561 5.01794C16.022 5.01794 14.051 6.66694 13.251 9.38394C12.031 7.54994 11.103 5.34794 10.564 3.49194H7.828V10.6039C7.826 12.0099 6.687 13.1499 5.281 13.1519C3.876 13.1499 2.738 12.0089 2.736 10.6039V3.49194H0V10.6039C0 13.5179 2.37 15.9069 5.281 15.9069C8.194 15.9069 10.564 13.5179 10.564 10.6039V9.41394C11.093 10.5209 11.746 11.6429 12.538 12.6349L10.865 20.5079H13.662L14.875 14.7979C15.938 15.4769 17.16 15.9069 18.561 15.9069C21.561 15.9069 24 13.4549 24 10.4569C24 7.45694 21.561 5.01794 18.561 5.01794Z"
